--- a/Curso react/datos/package.json
+++ b/Curso react/datos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estilosreact",
+  "name": "datos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,24 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.87.0",
-    "styled-components": "^6.1.17"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
     "vite": "^6.3.1"
   }
 }
